# dsat-ai

./: .gitignore  CHANGELOG.md  README.md  example_experiment.py  example_experiment_runnable.py  example_experiment_script.py  pyproject.toml  readme-agents.md  readme-chat.md
examples/: README.md
examples/agents/: conversation.py
examples/config/: agents.json
examples/scryptorum/: example_experiment_runnable.py  example_experiment_script.py  literary_evaluation.py
src/agents/: __init__.py  agent.py  agent_experiment.py  anthropic_agent.py  ollama_agent.py  vertex_agent.py
src/dsat/agents/: agent.py  anthropic_agent.py  ollama_agent.py  vertex_agent.py
src/dsat/cli/: chat.py  main.py
src/scryptorum/: __init__.py
src/scryptorum/cli/: commands.py
src/scryptorum/core/: __init__.py  config.py  decorators.py  experiment.py  logging_utils.py  runs.py
src/scryptorum/execution/: runner.py
test/: conftest.py  test_agents_anthropic.py  test_agents_base.py  test_agents_config.py  test_agents_experiment.py  test_agents_vertex.py  test_architecture_validation.py  test_cli_commands.py  test_core_config.py  test_core_decorators.py  test_core_experiment.py  test_core_runs.py  test_execution_runner.py  test_integration.py
