[project]
name = "scryptorum"
version = "0.1.0"
description = "Modern LLM experiment framework with annotation-driven design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
scryptorum = "scryptorum.cli.commands:main"

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
