[project]
name = "dsat"
version = "0.1.0"
description = "Dan's Simple Agent Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "tomlkit>=0.12.0",
    "requests>=2.31.0",
]

[project.scripts]
scryptorum = "scryptorum.cli.commands:main"

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/scryptorum"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
